[tool.black]
line-length = 119
target-version = ["py39"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "Diffusers Inpainting API"
version = "0.1.0"
description = ""
authors = ["YoungJae Kim <byeongal@comcom.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
fastapi = "^0.89.1"
celery = "^5.2.7"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
firebase-admin = "^6.0.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"